--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,6 @@
 {
     "compilerOptions": {
         "experimentalDecorators": true,
-        "allowJs": true,
-       
+        "allowJs": true
     }
-  }
+}
